[B]Version 1.1.99[/B]
- Porn Caper removed
- FamilypornHD fix playback
- latestporn fix listing
- Animeid Hentai fix playback