@@ -3,3 +3,4 @@
 - FamilypornHD fix playback
 - latestporn fix listing
 - Animeid Hentai fix playback
+- Beeg fix listing & categories
